--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-items id="village" src="assets/scene.gltf"></a-assets-items>
+      <a-asset-items id="village" src="hubs_human_male_bones.glb"></a-assets-items>
     </a-assets>
-    <a-entity gltf-model="#village"></a-entity>
+    <a-entity glb-model="#village"></a-entity>
   </a-scene>
   </body>
   </html>
