--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="village" src="mando_helmet/scene.gltf"></a-asset-item>
+      <a-asset-item id="village" src="sea_keep_lonely_watcher"></a-asset-item>
     </a-assets>
     <a-entity gltf-model="#village"></a-entity>
   </a-scene>
