--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="village" src="ship_in_a_bottle/scene.gltf" position="10 2 10"></a-asset-item>
+      <a-asset-item id="village" src="corvette/scene.gltf"></a-asset-item>
     </a-assets>
     <a-entity gltf-model="#village"></a-entity>
     
