--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="village" src="corvette/scene.gltf"></a-asset-item>
+      <a-asset-item id="village" src="sea_keep_lonely_watcher/scene.gltf"></a-asset-item>
     </a-assets>
     <a-entity gltf-model="#village"></a-entity>
-    <a-entity camera position="4 1.6 4"> </a-entity>
+    <a-entity camera position="0 5 100"> </a-entity>
   </a-scene>
   </body>
   </html>
