--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a-assets>
       <a-asset-item id="village" src="sea_keep_lonely_watcher/scene.gltf"></a-asset-item>
     </a-assets>
-    <a-entity gltf-model="#village"></a-entity>
-    <a-entity camera position="0 5 100"> </a-entity>
+    <a-entity gltf-model="#village" position="100 -5 100"></a-entity>
+    
   </a-scene>
   </body>
   </html>
