--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <a-assets>
       <a-asset-item id="village" src="sea_keep_lonely_watcher/scene.gltf"></a-asset-item>
     </a-assets>
-    <a-entity gltf-model="#village" position="-450 -70 200"></a-entity>
-       <a-entity light="type:point; intensity: 12 ;distance: 700; decay: 1" position="0 200 0"></a-entity>
+    <a-entity gltf-model="#village" position="-450 1 200"></a-entity>
+    <a-entity light="type:point; intensity: 12 ;distance: 700; decay: 1" position="0 200 0"></a-entity>
+    <a-camera position="10 100 10" ></a-camera>
   </a-scene>
   </body>
   </html>
